# gh-secrets-migrator

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  QUICK_REFERENCE.md  README.md  gh-secrets-migrator  gh-secrets-migrator.spec  main.py  manifest.json  pyproject.toml  requirements.txt
.github/workflows/: pre-release-checklist.yml  publish-ghcr.yml  release.yml  test-and-lint.yml
script/: build.sh  debug_incompletable_object.py  install-local-extension.ps1  install-local-extension.sh
src/cli/: commands.py
src/clients/: github.py
src/core/: config.py  migrator.py  workflow_generator.py
tests/: test_cli_authentication.py  test_config.py  test_endpoint_config.py  test_github_client.py  test_migrator_rate_limits.py  test_org_secret_filtering.py  test_org_secret_scoping.py  test_skip_existing.py
